force-app/main/default/objects/wrts_prcgvr__Activity__c/wrts_prcgvr__Activity__c.object-meta.xml
<CustomObject>
    <description>Activities are process related events, tasks or calls that have been made or sent</description>
    <label>Activity</label>
    <nameField>
        <displayFormat>ACT-{0000000000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>