force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities (Custom)</relationshipLabel>
    <relationshipName>Activities_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>