force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Account_Partner_Matching__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner_Matching__c</fullName>
    <formula>IF(ParentActivity__r.Order__r.AgencyCode__c == null || $User.AccountPartner__c == null || NOT(ISPICKVAL(Type__c, &apos;Gestione Agenzia&apos;)), false,  CONTAINS($User.AccountPartner__c,ParentActivity__r.Order__r.AgencyCode__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corrispondenza Account Partner</label>
    <type>Checkbox</type>
</CustomField>