force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ActivatedDate__c.field-meta.xml
<CustomField>
    <fullName>ActivatedDate__c</fullName>
    <label>Data attivazione</label>
    <type>DateTime</type>
</CustomField>