force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ActivityDuration__c.field-meta.xml
<CustomField>
    <fullName>ActivityDuration__c</fullName>
    <description>Durata attivita</description>
    <label>Durata Attività</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>