force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ActivityEndTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityEndTime__c</fullName>
    <description>Data e ora fine attività</description>
    <label>Fine Attività</label>
    <type>DateTime</type>
</CustomField>