force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ActivityOutcome__c.field-meta.xml
<CustomField>
    <fullName>ActivityOutcome__c</fullName>
    <description>Per salvare l&apos;esito di una generica lavorazione</description>
    <label>Esito attività</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positivo</fullName>
            </value>
            <value>
                <fullName>Negativo</fullName>
            </value>
            <value>
                <fullName>Dati corretti forniti da cliente e cambio uso inserito</fullName>
            </value>
            <value>
                <fullName>Dati corretti forniti da cliente e cambio uso - non necessario</fullName>
            </value>
            <value>
                <fullName>Dati corretti forniti dal DL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>