force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ActivityStartTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityStartTime__c</fullName>
    <description>Data e ora inizio attività</description>
    <label>Inizio Attività</label>
    <type>DateTime</type>
</CustomField>