force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ageing__c.field-meta.xml
<CustomField>
    <fullName>ageing__c</fullName>
    <label>Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>