force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/AnomalyExample__c.field-meta.xml
<CustomField>
    <fullName>AnomalyExample__c</fullName>
    <label>Esempio Anomalia</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>