force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/AppointmentCode__c.field-meta.xml
<CustomField>
    <fullName>AppointmentCode__c</fullName>
    <description>Codice appuntamento ricevuto</description>
    <label>Codice Appuntamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>