force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/AppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDate__c</fullName>
    <description>Data Appuntamento</description>
    <label>Data Appuntamento Confermato</label>
    <type>Date</type>
</CustomField>