force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/AppointmentDateToConfirm__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDateToConfirm__c</fullName>
    <description>Contiene Data  dell&apos;appuntamento scelto dal cliente ma ancora non confermato dal DL</description>
    <label>Data appuntamento da confermare</label>
    <type>Date</type>
</CustomField>