force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/AppointmentTimeSlotToConfirm__c.field-meta.xml
<CustomField>
    <fullName>AppointmentTimeSlotToConfirm__c</fullName>
    <description>Contiene Fascia dell&apos;appuntamento scelto dal cliente ma ancora non confermato dal DL</description>
    <label>Fascia appuntamento da confermare</label>
    <length>11</length>
    <type>Text</type>
</CustomField>