force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/AssignedToQueueDate__c.field-meta.xml
<CustomField>
    <fullName>AssignedToQueueDate__c</fullName>
    <label>Data Assegnazione</label>
    <type>Date</type>
</CustomField>