force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/AssigneeType__c.field-meta.xml
<CustomField>
    <fullName>AssigneeType__c</fullName>
    <label>Tipo Assegnatario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utente</fullName>
            </value>
            <value>
                <fullName>Coda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>