force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/AssignmentRule__c.field-meta.xml
<CustomField>
    <fullName>AssignmentRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regola di Assegnazione</label>
    <referenceTo>AssignmentRule__c</referenceTo>
    <relationshipLabel>Activities (Custom)</relationshipLabel>
    <relationshipName>Activities_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>