force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/AssociationStatute__c.field-meta.xml
<CustomField>
    <fullName>AssociationStatute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag per gestione attività</description>
    <label>Statuto dell&apos;ass./Atto cost.</label>
    <type>Checkbox</type>
</CustomField>