force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/AttemptCount__c.field-meta.xml
<CustomField>
    <fullName>AttemptCount__c</fullName>
    <description>Registra il numero di tentativi di ricontatto del cliente</description>
    <label>Numero tentativi</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>