force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/BillTransfer__c.field-meta.xml
<CustomField>
    <fullName>BillTransfer__c</fullName>
    <description>Importo dell&apos;addebito</description>
    <label>Storno Fattura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>