force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/BPCode__c.field-meta.xml
<CustomField>
    <fullName>BPCode__c</fullName>
    <description>Codice identificativo del cliente digitato in IVR</description>
    <label>Codice BP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>