force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CallCenterNumber__c.field-meta.xml
<CustomField>
    <fullName>CallCenterNumber__c</fullName>
    <description>Numero centralino coinvolto nell&apos;interazione</description>
    <label>Numero Verde</label>
    <type>Phone</type>
</CustomField>