force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CallDuration__c.field-meta.xml
<CustomField>
    <fullName>CallDuration__c</fullName>
    <description>Durata chiamata</description>
    <label>Durata Chiamata</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>