force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CalledNumber__c.field-meta.xml
<CustomField>
    <fullName>CalledNumber__c</fullName>
    <description>Numero cliente per chiamate outbound, numero cliente per chiamate inbound</description>
    <label>Numero Chiamato</label>
    <type>Phone</type>
</CustomField>