force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CallEndTime__c.field-meta.xml
<CustomField>
    <fullName>CallEndTime__c</fullName>
    <description>Data e ora fine chiamata</description>
    <label>Fine Chiamata</label>
    <type>DateTime</type>
</CustomField>