force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CallingNumber__c.field-meta.xml
<CustomField>
    <fullName>CallingNumber__c</fullName>
    <description>Numero cliente per chiamate inbound, numero centralino per chiamate outbound</description>
    <label>Numero Chiamante</label>
    <type>Phone</type>
</CustomField>