force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CallStartTime__c.field-meta.xml
<CustomField>
    <fullName>CallStartTime__c</fullName>
    <description>Data e ora inizio chiamata</description>
    <label>Inizio Chiamata</label>
    <type>DateTime</type>
</CustomField>