force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CausalError__c.field-meta.xml
<CustomField>
    <fullName>CausalError__c</fullName>
    <description>Indica la causale errore ricevuta dal DL</description>
    <label>Causale Errore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>