force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Viene restituito il canale di vendita dell&apos;ordine padre correlato, oppure dell&apos;ordine padre dell&apos;ordine correlato all&apos;attività</description>
    <formula>IF(Order__r.ParentOrder__c = null, Order__r.Channel__c , Order__r.ParentOrder__r.Channel__c)</formula>
    <label>Canale di vendita</label>
    <type>Text</type>
</CustomField>