force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ClientNumber__c.field-meta.xml
<CustomField>
    <fullName>ClientNumber__c</fullName>
    <description>Numero cliente coinvolto nell&apos;interazione</description>
    <label>Numero Cliente</label>
    <type>Phone</type>
</CustomField>