force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ClosedByUsername__c.field-meta.xml
<CustomField>
    <fullName>ClosedByUsername__c</fullName>
    <label>Utente chiusura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>