force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ClosingCreatorGroup__c.field-meta.xml
<CustomField>
    <fullName>ClosingCreatorGroup__c</fullName>
    <label>Gruppo Creatore di Chiusura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CreatorGroup</valueSetName>
    </valueSet>
</CustomField>