force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ClosingUserChannel__c.field-meta.xml
<CustomField>
    <fullName>ClosingUserChannel__c</fullName>
    <label>Canale Utente di Chiusura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>