force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <description>Categoria del processo richiesto su canale protocollo, su questo campo è basato l&apos;automatismo dell&apos;assegnazione pratiche</description>
    <label>Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Annullamento</fullName>
            </value>
            <value>
                <fullName>Attivazioni</fullName>
            </value>
            <value>
                <fullName>Attivazioni - Generiche</fullName>
                <isActive>false</isActive>
            </value>
            <value>
                <fullName>Autolettura</fullName>
            </value>
            <value>
                <fullName>Canone Rai</fullName>
            </value>
            <value>
                <fullName>Disattivazioni</fullName>
            </value>
            <value>
                <fullName>Fatturazione</fullName>
            </value>
            <value>
                <fullName>Indennizzi</fullName>
            </value>
            <value>
                <fullName>Informative</fullName>
            </value>
            <value>
                <fullName>Modifiche Anagrafiche</fullName>
            </value>
            <value>
                <fullName>Morosità</fullName>
            </value>
            <value>
                <fullName>Notifiche</fullName>
            </value>
            <value>
                <fullName>Pagamenti</fullName>
            </value>
            <value>
                <fullName>Post Sales VAS</fullName>
            </value>
            <value>
                <fullName>Preventivi</fullName>
            </value>
            <value>
                <fullName>Reclami</fullName>
            </value>
            <value>
                <fullName>Variazioni</fullName>
            </value>
            <value>
                <fullName>Verifiche</fullName>
            </value>
            <value>
                <fullName>Voltura</fullName>
            </value>
            <value>
                <fullName>VOTIVE Modena</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>