force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CompletationDateDocument__c.field-meta.xml
<CustomField>
    <fullName>CompletationDateDocument__c</fullName>
    <label>Data Documentazione Completata</label>
    <type>Date</type>
</CustomField>