force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ConnectionID__c.field-meta.xml
<CustomField>
    <fullName>ConnectionID__c</fullName>
    <description>ID chiamata univoco Genesys</description>
    <label>ConnectionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>