force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities (Custom)</relationshipLabel>
    <relationshipName>Activities_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>