force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ContactDate__c.field-meta.xml
<CustomField>
    <fullName>ContactDate__c</fullName>
    <description>data contato quality/comfort call</description>
    <label>Data contatto</label>
    <type>Date</type>
</CustomField>