force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ContactReason__c.field-meta.xml
<CustomField>
    <fullName>ContactReason__c</fullName>
    <description>Tipo Esigenza del cliente allo sportello HC Point.</description>
    <label>Tipo Esigenza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistenza</fullName>
            </value>
            <value>
                <fullName>Info Commerciali</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>