force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ContactResult__c.field-meta.xml
<CustomField>
    <fullName>ContactResult__c</fullName>
    <description>esito contato quality/comfort call</description>
    <label>Esitto contatto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>