force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ContactSurname__c.field-meta.xml
<CustomField>
    <fullName>ContactSurname__c</fullName>
    <label>Cognome Interlocutore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>