force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <description>Campo per tracciare il numero del contratto di SAP</description>
    <label>Numero Contratto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>