force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CraftsmenRegisterNumber__c.field-meta.xml
<CustomField>
    <fullName>CraftsmenRegisterNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag per gestione attività</description>
    <label>N. Iscrizione albo artigiani</label>
    <type>Checkbox</type>
</CustomField>