force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CreditCheckReason__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckReason__c</fullName>
    <description>Ricevuto sull&apos;ordine nella chiamata da SAP, viene ribaltato sull&apos;Activity una volta creata</description>
    <label>Causale Credit Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>