force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CreditCheckResolutionReason__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckResolutionReason__c</fullName>
    <description>Valorizzato in automatico dal sistema se l&apos;order riceve una causale &quot;Saldo debito cattivo pagatore&quot;</description>
    <label>Causale Risoluzione Credit Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>