force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CreditCheckResults__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckResults__c</fullName>
    <label>Esito Credit Check</label>
    <length>2</length>
    <type>Text</type>
</CustomField>