force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CrmChange__c.field-meta.xml
<CustomField>
    <fullName>CrmChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True se l&apos;attività è stata conclusa a seguito di un cambio CRM</description>
    <label>Cambio CRM</label>
    <type>Checkbox</type>
</CustomField>