force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CvpErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>CvpErrorDescription__c</fullName>
    <description>Informazione relativa all&apos;esito CVP; RelatiRicevuta nella notify in caso di KO o di Saldo debito pagatore da SAP (ERRORDESCRIPTION)</description>
    <label>Descrizione Errore CVP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>