force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/CvpId__c.field-meta.xml
<CustomField>
    <fullName>CvpId__c</fullName>
    <label>Id Pratica CVP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>