force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/DiscardCategory__c.field-meta.xml
<CustomField>
    <fullName>DiscardCategory__c</fullName>
    <description>Campo tecnico per indicare la categoria a cui appartiene l&apos;attività di scarto</description>
    <label>Categoria scarto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scarto complesso</fullName>
            </value>
            <value>
                <fullName>Scarto semplice</fullName>
            </value>
            <value>
                <fullName>Documentale</fullName>
            </value>
            <value>
                <fullName>Gestionale</fullName>
            </value>
            <value>
                <fullName>Tracciatura</fullName>
            </value>
            <value>
                <fullName>Manuale</fullName>
            </value>
            <value>
                <fullName>Anonima</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>