force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/DiscardCount__c.field-meta.xml
<CustomField>
    <fullName>DiscardCount__c</fullName>
    <label>Counter Scarto</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>