force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/DiscardDescription__c.field-meta.xml
<CustomField>
    <fullName>DiscardDescription__c</fullName>
    <label>Descrizione scarto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>