force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/DiscardWorked__c.field-meta.xml
<CustomField>
    <fullName>DiscardWorked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se è stato premuto il pulsante edit</description>
    <label>Scarto rilavorato</label>
    <type>Checkbox</type>
</CustomField>