force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributore</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities (Custom) (Distributore)</relationshipLabel>
    <relationshipName>Activities_Custom1</relationshipName>
    <type>Lookup</type>
</CustomField>