force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <description>Dati da migrare</description>
    <label>Documentazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>