force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Ecid__c.field-meta.xml
<CustomField>
    <fullName>Ecid__c</fullName>
    <externalId>true</externalId>
    <label>Ecid</label>
    <length>32</length>
    <type>Text</type>
</CustomField>