force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>Effective Date</description>
    <label>Data Decorrenza</label>
    <type>Date</type>
</CustomField>