force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Dato di contatto cliente canale Email</description>
    <label>Email Self</label>
    <type>Email</type>
</CustomField>