force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Data di termine effettiva (completamento)</description>
    <label>Data Completamento</label>
    <type>Date</type>
</CustomField>