force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/EnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeId__c</fullName>
    <description>E&apos; un Id plico</description>
    <label>Id plico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>