force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ExpectedBehavior__c.field-meta.xml
<CustomField>
    <fullName>ExpectedBehavior__c</fullName>
    <label>Comportamento Atteso</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>