force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/FinalReason__c.field-meta.xml
<CustomField>
    <fullName>FinalReason__c</fullName>
    <formula>Order__r.CreditCheckDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Causale Finale</label>
    <type>Text</type>
</CustomField>