force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/FiscalCode__c.field-meta.xml
<CustomField>
    <fullName>FiscalCode__c</fullName>
    <description>Codice Fiscale del cliente inviato da Sigma al CRM.</description>
    <label>Codice Fiscale AU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>