force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/HerokuPracticeCode__c.field-meta.xml
<CustomField>
    <fullName>HerokuPracticeCode__c</fullName>
    <description>Heroku Practice Code</description>
    <label>Codice Pratica Heroku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>