force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/IBMUnicaCampaignCreationDate__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaCampaignCreationDate__c</fullName>
    <description>Dati da migrare</description>
    <label>Data creazione Campagna IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>