force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/IdSiebelActivity__c.field-meta.xml
<CustomField>
    <fullName>IdSiebelActivity__c</fullName>
    <description>Chiave univoca dell&apos;attività in SIEBEL</description>
    <label>ID Attività</label>
    <length>255</length>
    <type>Text</type>
</CustomField>