force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interazione</label>
    <referenceTo>Interaction__c</referenceTo>
    <relationshipLabel>Activities (Custom)</relationshipLabel>
    <relationshipName>Activities_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>