force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/InteractionReason__c.field-meta.xml
<CustomField>
    <fullName>InteractionReason__c</fullName>
    <label>Causale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Protocollo Gestito</fullName>
            </value>
            <value>
                <fullName>Non lavorabile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>