force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/isAcciseContractualPower__c.field-meta.xml
<CustomField>
    <fullName>isAcciseContractualPower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potenza Contrattuale</label>
    <type>Checkbox</type>
</CustomField>