force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/isAccisePdrPod__c.field-meta.xml
<CustomField>
    <fullName>isAccisePdrPod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matricola POD/PDR</label>
    <type>Checkbox</type>
</CustomField>