force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/IsAppointmentToEdit__c.field-meta.xml
<CustomField>
    <fullName>IsAppointmentToEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appuntamento da Modificare</label>
    <type>Checkbox</type>
</CustomField>