force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/IsApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>IsApprovalRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attivita da approvare</label>
    <type>Checkbox</type>
</CustomField>