force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/isAtoA__c.field-meta.xml
<CustomField>
    <fullName>isAtoA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se l&apos;Activity traccia un appuntamento gestito in AtoA o no</description>
    <label>AtoA</label>
    <type>Checkbox</type>
</CustomField>