force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/IsClientInResolution153__c.field-meta.xml
<CustomField>
    <fullName>IsClientInResolution153__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indentifica se cliente residenziale o business nella quality/comfort</description>
    <label>Cliente in Delibera 153</label>
    <type>Checkbox</type>
</CustomField>