force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/isIva10Module__c.field-meta.xml
<CustomField>
    <fullName>isIva10Module__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compilazione Modulo Iva 10%</label>
    <type>Checkbox</type>
</CustomField>