force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/isIvaCopyDocument__c.field-meta.xml
<CustomField>
    <fullName>isIvaCopyDocument__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copia Documenti Identita</label>
    <type>Checkbox</type>
</CustomField>