force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/isIvaSupplyAddress__c.field-meta.xml
<CustomField>
    <fullName>isIvaSupplyAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirizzo Fornitura</label>
    <type>Checkbox</type>
</CustomField>