force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/isSelfAppointment__c.field-meta.xml
<CustomField>
    <fullName>isSelfAppointment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se l&apos;Activity traccia un appuntamento gestito in SELF dal cliente</description>
    <label>Appuntamento Self</label>
    <type>Checkbox</type>
</CustomField>