force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/isUserActivity__c.field-meta.xml
<CustomField>
    <fullName>isUserActivity__c</fullName>
    <formula>IF( $User.Id ==  OwnerId , true,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attività Utente</label>
    <type>Checkbox</type>
</CustomField>