force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/LastAssignmentDate__c.field-meta.xml
<CustomField>
    <fullName>LastAssignmentDate__c</fullName>
    <label>Data Ultima Asgn.</label>
    <type>DateTime</type>
</CustomField>