force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Activities (Custom)</relationshipLabel>
    <relationshipName>Activities_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>