force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/LoginChannel__c.field-meta.xml
<CustomField>
    <fullName>LoginChannel__c</fullName>
    <label>Canale di Vendita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>