force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/MalfunctionDate__c.field-meta.xml
<CustomField>
    <fullName>MalfunctionDate__c</fullName>
    <label>Decorrenza Malfunzionamento</label>
    <type>DateTime</type>
</CustomField>