force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/MalfunctioningFeature__c.field-meta.xml
<CustomField>
    <fullName>MalfunctioningFeature__c</fullName>
    <label>Processo/Sistema malfunzionante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>